Hay 2 funcionalidades que van perfectas pero 1 está medio hacer

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -18,6 +18,12 @@
         android:layout_height="wrap_content"
         android:hint="Password"/>
 
+    <EditText
+        android:id="@+id/namedEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Name"/>
+
     <Button
         android:id="@+id/registerButton"
         android:layout_width="match_parent"
