--- a/app/src/main/res/layout/viewholder_post.xml
+++ b/app/src/main/res/layout/viewholder_post.xml
@@ -5,62 +5,99 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardUseCompatPadding="true">
+
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:padding="10dp">
+
         <ImageView
-            android:id="@+id/authorPhotoImageView"
+            android:id="@+id/photoImageView"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             app:srcCompat="@drawable/user" />
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="255dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingStart="10dp">
+
             <TextView
                 android:id="@+id/authorTextView"
                 style="@style/Base.TextAppearance.AppCompat.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:text="Author"/>
+                android:text="Author" />
+
+            <ImageView
+                android:id="@+id/papeleraImageView"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
+                android:layout_gravity="right"
+                android:background="@drawable/papelera" />
+
             <TextView
                 android:id="@+id/contentTextView"
-                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="Contenido"/>
+                android:text="Contenido"
+                android:textSize="20sp" />
+
             <ImageView
                 android:id="@+id/mediaImage"
-                android:layout_marginTop="10dp"
                 android:layout_width="196dp"
                 android:layout_height="196dp"
-                android:adjustViewBounds="true"/>
-            <LinearLayout
-                android:id="@+id/likeLinearLayout"
                 android:layout_marginTop="10dp"
+                android:adjustViewBounds="true" />
+
+            <LinearLayout
+                android:id="@+id/buttonsLinearLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/likeImageView"
-                    app:srcCompat="@drawable/like_on"
-                    android:adjustViewBounds="true"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"/>
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="30dp"
+                    android:adjustViewBounds="true"
+                    app:srcCompat="@drawable/like_on" />
+
                 <TextView
                     android:id="@+id/numLikesTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
                     android:layout_gravity="center_vertical"
-                    android:text="200K"/>
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="30dp"
+                    android:text="1" />
+
+                <ImageView
+                    android:id="@+id/retweetImageView"
+                    android:layout_width="26dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="30dp"
+                    android:adjustViewBounds="true"
+                    app:srcCompat="@drawable/rt_on" />
+
+                <TextView
+                    android:id="@+id/numRetweetsTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="50dp"
+                    android:text="1" />
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
